--- a/FactElec.CapaDatos/FactElec.CapaDatos.csproj
+++ b/FactElec.CapaDatos/FactElec.CapaDatos.csproj
@@ -46,7 +46,13 @@
   <ItemGroup>
     <Compile Include="Da_Comprobante.cs" />
     <Compile Include="Da_Validacion.cs" />
+    <Compile Include="EnvioComprobante\Da_Archivo.cs" />
+    <Compile Include="EnvioCorreo\Da_Comprobante.cs" />
+    <Compile Include="EnvioCorreo\Da_Archivo.cs" />
+    <Compile Include="EnvioCorreo\Da_Correo.cs" />
+    <Compile Include="GenerarPDF\Da_Comprobante.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SqlHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FactElec.CapaEntidad\FactElec.CapaEntidad.csproj">
