--- a/FactElec.WebApi/Web.config
+++ b/FactElec.WebApi/Web.config
@@ -6,11 +6,11 @@
 <configuration>
   <appSettings>
     <add key="correoEmisor" value="amilcar.huaman@outlook.com" />
-    <add key="asunto" value="Se envía el comprobante electrónico: {0} {1}"/>
-    <add key="puerto" value="587"/>
-    <add key="host" value="smtp.live.com"/>
+    <add key="asunto" value="Se envía el comprobante electrónico: {0} {1}" />
+    <add key="puerto" value="587" />
+    <add key="host" value="smtp.live.com" />
     <add key="usuario" value="amilcar.huaman@outlook.com" />
-    <add key ="clave" value="*********" />
+    <add key="clave" value="@milkamus082030" />
   </appSettings>
   <connectionStrings>
     <add name="cnx" connectionString="server=(local);database=FacturacionElectronicaDB;uid=sa;pwd=123456" />
@@ -55,4 +55,17 @@
     </compilers>
     
   </system.codedom>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BillServicePortBinding">
+          <security mode="Transport" />
+        </binding>
+        <binding name="BillServicePortBinding1" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="https://e-beta.sunat.gob.pe:443/ol-ti-itcpfegem-beta/billService" binding="basicHttpBinding" bindingConfiguration="BillServicePortBinding" contract="wsSUNAT.billService" name="BillServicePort" />
+    </client>
+  </system.serviceModel>
 </configuration>
