--- a/FactElec.WebApi/Web.config
+++ b/FactElec.WebApi/Web.config
@@ -65,7 +65,16 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="https://e-beta.sunat.gob.pe:443/ol-ti-itcpfegem-beta/billService" binding="basicHttpBinding" bindingConfiguration="BillServicePortBinding" contract="wsSUNAT.billService" name="BillServicePort" />
+      <endpoint address="https://e-factura.sunat.gob.pe/ol-ti-itcpfegem/billService" binding="basicHttpBinding" bindingConfiguration="BillServicePortBinding" contract="wsSUNAT.billService" name="BillServicePort" >
+        <headers>
+          <wsse:Security mustUnderstand="0" xmlns:wsse="http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-wssecurity-secext-1.0.xsd">
+            <wsse:UsernameToken Id="ABC-123">
+              <wsse:Username>20602034675FACTURAE</wsse:Username>
+              <wsse:Password>Moretoy2020</wsse:Password>
+            </wsse:UsernameToken>
+          </wsse:Security>
+        </headers>
+      </endpoint>
     </client>
   </system.serviceModel>
 </configuration>
