Actualización de fuentes.

--- a/FactElec.WebApi/Web.config
+++ b/FactElec.WebApi/Web.config
@@ -5,15 +5,16 @@
   -->
 <configuration>
   <appSettings>
-    <add key="correoEmisor" value="amilcar.huaman@outlook.com" />
+    <add key="correoEmisor" value="SysFacturacionperu@gmail.com" />
     <add key="asunto" value="Se envía el comprobante electrónico: {0} {1}" />
     <add key="puerto" value="587" />
-    <add key="host" value="smtp.live.com" />
-    <add key="usuario" value="amilcar.huaman@outlook.com" />
-    <add key="clave" value="*********" />
+    <add key="host" value="smtp.gmail.com" />
+    <add key="usuario" value="SysFacturacionperu@gmail.com" />
+    <add key="clave" value="xxxxxxxx" />
+    <add key="20602034675" value="Clave2020#" />
   </appSettings>
   <connectionStrings>
-    <add name="cnx" connectionString="server=(local);database=FacturacionElectronicaDB;uid=sa;pwd=123456" />
+    <add name="cnx" connectionString="server=LENOVO-PC\MSSQLSERVER17;database=FacturacionElectronicaDB;uid=sa;pwd=123456789"/>   
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
@@ -65,7 +66,10 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="https://e-beta.sunat.gob.pe/ol-ti-itcpfegem-beta/billService" binding="basicHttpBinding" bindingConfiguration="BillServicePortBinding" contract="wsSUNAT.billService" name="BillServicePort" >
+      <!--<endpoint address="https://e-beta.sunat.gob.pe:443/ol-ti-itcpfegem-beta/billService" binding="basicHttpBinding" bindingConfiguration="BillServicePortBinding" contract="wsSUNAT.billService" name="BillServicePort" />-->
+      <!--<endpoint address="https://e-factura.sunat.gob.pe/ol-ti-itcpfegem/billService" binding="basicHttpBinding" bindingConfiguration="BillServicePortBinding" contract="wsSUNAT.billService" name="BillServicePort" >-->
+
+      <endpoint address="https://e-beta.sunat.gob.pe:443/ol-ti-itcpfegem-beta/billService" binding="basicHttpBinding" bindingConfiguration="BillServicePortBinding" contract="wsSUNAT.billService" name="BillServicePort" >
         <headers>
           <wsse:Security mustUnderstand="0" xmlns:wsse="http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-wssecurity-secext-1.0.xsd">
             <wsse:UsernameToken Id="ABC-123">
@@ -75,6 +79,7 @@
           </wsse:Security>
         </headers>
       </endpoint>
+      
     </client>
   </system.serviceModel>
 </configuration>
