--- a/FactElec.Webervice/Web.config
+++ b/FactElec.Webervice/Web.config
@@ -2,9 +2,12 @@
 <configuration>
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true"/>
+    <add key="20602034675" value="Clave2020#" />
+    <add key="usuarioruc" value="ILLAIRES" />
+    <add key="clavesol" value="balvallea" />
   </appSettings>
   <connectionStrings>
-    <add name="cnx" connectionString="server=(local);database=FacturacionElectronicaDB;uid=sa;pwd=123456"/>
+    <add name="cnx" connectionString="server=LENOVO-PC\MSSQLSERVER17;database=FacturacionElectronicaDB;uid=sa;pwd=123456789"/>
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1"/>
