--- a/FactElec.WebApi/Web.config
+++ b/FactElec.WebApi/Web.config
@@ -14,7 +14,7 @@
     <add key="20602034675" value="Clave2020#" />
   </appSettings>
   <connectionStrings>
-    <add name="cnx" connectionString="server=LENOVO-PC\MSSQLSERVER17;database=FacturacionElectronicaDB;uid=sa;pwd=123456789"/>   
+    <add name="cnx" connectionString="server=(local);database=FacturacionElectronicaDB;uid=sa;pwd=123456"/>   
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
