--- a/FactElec.Webervice/Web.config
+++ b/FactElec.Webervice/Web.config
@@ -6,8 +6,8 @@
     <add key="usuarioruc" value="ILLAIRES" />
     <add key="clavesol" value="balvallea" />
   </appSettings>
-  <connectionStrings>
-    <add name="cnx" connectionString="server=LENOVO-PC\MSSQLSERVER17;database=FacturacionElectronicaDB;uid=sa;pwd=123456789"/>
+  <connectionStrings>    
+    <add name="cnx" connectionString="server=(local);database=FacturacionElectronicaDB;uid=sa;pwd=123456"/>
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1"/>
